Created a class library as well as a simple command program for testing. The class library is for houseing all API related info / classes. I also have added references to the other projects.

--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -96,5 +96,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\APILibrary\APILibrary.csproj">
+      <Project>{3db61065-40c0-4f54-86d3-72991cc039b9}</Project>
+      <Name>APILibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
